[metadata]
name = print_position
version = 1.0.0
author = Pranav Soni
author_email = pranav.bhawan@gmail.com
description = A cool python package to add the line number and file name in the print statements.
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/ps428/PrintPosition-pip
project_urls =
    Bug Tracker = https://github.com/ps428/PrintPosition-pip/issues
    repository = https://github.com/ps428/PrintPosition-pip
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src